fixing errors in NotesSection5 and adding 5.1_Extra

--- a/notes/1.4_Extra.ipynb
+++ b/notes/1.4_Extra.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "- Here we minimized an objective function $$J=\\sum_i \\epsilon_i^2$$\n",
     "- What happens if each observation has different errors? Then we could minimize an objective function $$\\chi^2=\\sum_i \\frac{\\epsilon_i^2}{r_i^2}$$ where $r_i$ is an estimate of the error that can vary between measurements \n",
-    "- In matrix form, $$\\chi^2 = \\left(\\vec{y}-\\hat{\\vec{y}}\\right)^T R \\left(\\vec{y}-\\hat{\\vec{y}}\\right)$$ Where $R$ is a error covariance matrix. \n",
+    "- In matrix form, $$\\chi^2 = \\left(\\vec{y}-\\hat{\\vec{y}}\\right)^T R^{-1} \\left(\\vec{y}-\\hat{\\vec{y}}\\right)$$ Where $R$ is a error covariance matrix. \n",
     "- We will come back to this in section 5, since it plays an important role in data assimilation."
    ]
   },
