--- a/notes/NotesSection5.ipynb
+++ b/notes/NotesSection5.ipynb
@@ -533,7 +533,7 @@
     "\n",
     "## Why did we stochastically perturb the observations?\n",
     "- If we hand't stochastically perturbed the observations it can be shown that the final analysis covariance would be (Burgers et. al. 1998): $$ \\Gamma_a = \\left(I-KH\\right)\\Gamma^f_{k}\\left(I-KH\\right)^T $$ \n",
-    "- In general, $\\left(I-KH\\right)$ is going to decrease the variance (otherwise we wouldn't bother doing the updates). This means that without stochastic perturbations the $Gamma_a$ estimate will be decreasing faster than it would be in the normal Kalman Filter. \n",
+    "- In general, $\\left(I-KH\\right)$ is going to decrease the variance (otherwise we wouldn't bother doing the updates). This means that without stochastic perturbations the $\\Gamma_a$ estimate will be decreasing faster than it would be in the normal Kalman Filter. \n",
     "  - This causes a phenomenon known as \"Filter Collapse\". Since the size of the ensemble depends on the analysis covariance, if the analysis covariance is constantly being decreased the ensemble will begin to shrink, and at some point the ensemble will not be large enough to accurately estimate the covariance, and it will further collapse. \n",
     "  - Although having a small covariance sounds good, if it becomes a low enough underestimate it will seriously decrease the quality of the filter, since the ensemble members will not be spread out far enough in order to accurately estimate the mean anymore.  \n",
     "  \n",
@@ -679,8 +679,8 @@
     "- When we derived the least squares solution, we chose an objective function, and then we could analytically derive the parameter estimates. \n",
     "- The idea with 4DVAR is to define an objective function, which we will then optimize. Unlike with least squares it will not be possible to do this most of the time, but we numerically optimize the objective function to find some parameters\n",
     "- Suppose that our observations, $\\vec{z}(t)$, are coming over some initial period $t_i=t_0,...,t_n$ that happen before the forecast starts. We would like to pick an initial condition, $\\vec{x}_0$, which minimizes our objective function. Jumping ahead a little bit, the final objective function is: $$\\begin{align*}J\\left(\\vec{x}_0\\right) = &  + \\frac{1}{2} \\sum_{k=1}^{k=n} \\left(\\vec{z}_k - H \\vec{x}_k^f\\right)^T \\Gamma_r^{-1} \\left(\\vec{z}_k - H \\vec{x}_k^f\\right) \\\\ & \\frac{1}{2} \\left(\\vec{x}_0 - \\vec{x}^f\\right)^T \\Gamma_b^{-1}  \\left(\\vec{x}_0 - \\vec{x}_f\\right) \\end{align*}  $$ \n",
-    "  - $P_0^f$ is the uncertainty in the initial conditions \n",
-    "  - $R$ is the uncertainty in the observations \n",
+    "  - $\\Gamma_b$ is the uncertainty in the initial conditions \n",
+    "  - $\\Gamma_r$ is the uncertainty in the observations \n",
     "  - $H$ is the observation operator \n",
     "  \n",
     "- In the next section I will give a short example showing how the numerical optimization of a cost function works, then we will derive $J$, and then finally discuss some practical challenges when using 4DVAR. \n",
@@ -814,7 +814,7 @@
     "## Deriving the 4DVAR objective function \n",
     "\n",
     "- The derivation is somewhat similar to that for optimal interpolation, in that we are going to try to find the probability distribution of the model state conditioned on having some set of observations. \n",
-    "- For now we are going to assume that everything is Gaussian, but we'll come back to this at the end. \n",
+    "- We are going to assume that everything is Gaussian. \n",
     "- I tried a few different notations, all of them are confusing, but this one is the least confusing:\n",
     "  - $X_k \\rightarrow$ matrix of all the model states as column vectors from time 0 to time k. \n",
     "  - $x_k \\rightarrow$ vector of the model state at time k.   \n",
@@ -830,7 +830,7 @@
     "$$ P\\left(X_k\\right) = P\\left(x_{k}|x_{k-1}\\right) P\\left(x_{k-1}|x_{k-2}\\right) \\dots P\\left(x_{0}\\right) $$\n",
     "\n",
     "- Now we have 3 different types of probabilities: $P\\left(z_k|x_k\\right), P\\left(x_{k}|x_{k-1}\\right), \\mathrm{and}\\; P\\left(x_{0}\\right)$ We can treat them seperately, but we will assume that all of them are multivariate Gaussians. We're also going to ignore a bunch of normalization factors, on the basis that they will work out in the end.\n",
-    "  - Using the observation model we can write: $$ \\begin{align*} P\\left(z_{k}|x_{k}\\right)  \\propto & \\exp\\left( - J^{obs}_{k} \\right) \\\\ J^{obs}_{k}  = & \\frac{1}{2}\\left(\\vec{z}_k H \\vec{x}_k\\right)^T \\Gamma_r^{-1} \\left(\\vec{z}_k - H \\vec{x}_k\\right) \\end{align*} $$ Here $\\Gamma_r$ is characterising the observation noise.\n",
+    "  - Using the observation model we can write: $$ \\begin{align*} P\\left(z_{k}|x_{k}\\right)  \\propto & \\exp\\left( - J^{obs}_{k} \\right) \\\\ J^{obs}_{k}  = & \\frac{1}{2}\\left(\\vec{z}_k - H \\vec{x}_k\\right)^T \\Gamma_r^{-1} \\left(\\vec{z}_k - H \\vec{x}_k\\right) \\end{align*} $$ Here $\\Gamma_r$ is characterising the observation noise.\n",
     "  - Using the forecast model we can write: $$ \\begin{align*} P\\left(x_{k}|x_{k-1}\\right)  \\propto & \\exp\\left( - J^{mod}_{k} \\right) \\\\ J^{mod}_{k}  = & \\frac{1}{2}\\left(\\vec{x}_k - F(\\vec{x}_{k-1})\\right)^T \\Gamma_m \\left(\\vec{x}_k - F(\\vec{x}_{k-1})\\right) \\end{align*} $$ For non-stochastic models the including the this term is equivalent to assuming that there is some model error that can be represented at each time step as a random perturbation. $\\Gamma_m$ is thus characterizing the size of the model errors. \n",
     "  - And lastly, we can write $$  \\begin{align*} P\\left(x_{0}\\right) \\propto & \\exp\\left( - J^{ini} \\right) \\\\ J^{ini}  = & \\frac{1}{2}\\left(\\vec{x}^{b}_0 - \\vec{x}_0\\right)^T \\Gamma_b \\left(\\vec{x}^{b}_0 - \\vec{x}_0\\right) \\end{align*} $$ Here $\\vec{x}_0$ is a vector of the initial conditions, and $\\vec{x}^b$ is the background estimate. Ideally, $\\Gamma_b$ would characterize the difference between the truth and the background. However in real applications the truth is never known approximatley, and so $\\Gamma_B$ has to be approximated.\n",
     "\n",
@@ -851,7 +851,7 @@
     "  4. use $\\nabla_{\\vec{x}_0} J$ to pick another value of $x_0$ and calculate $J$\n",
     "  5. continue until $J$ reaches a minimum \n",
     "\n",
-    "- Most of the time estimating $\\Gamma_m$ is not feasible. This leads to the more popular \"perfect model\" or \"Strong Constraint\" 4DVAR by removing the model error term: $$ J^{weak}\\left(\\vec{x}_0\\right)  =  \\frac{1}{2} \\left[ \\sum_{k=1}^{k=n}J^{obs}_{k} + J^{ini}\\right] $$ Usually when people refer to 4DVAR they mean the strong constraint 4DVAR\n",
+    "- Most of the time estimating $\\Gamma_m$ is not feasible. This leads to the more popular \"perfect model\" or \"Strong Constraint\" 4DVAR by removing the model error term: $$ J^{strong}\\left(\\vec{x}_0\\right)  =  \\frac{1}{2} \\left[ \\sum_{k=1}^{k=n}J^{obs}_{k} + J^{ini}\\right] $$ Usually when people refer to 4DVAR they mean the strong constraint 4DVAR\n",
     "  - substituting in all the expressions into this gives the expression that I quoted at the start of this subsection. \n",
     "\n",
     "- What would happen if we only had observations at one time point, say time $k$? Then we would have 3DVAR: $$ J^{3D}\\left(\\vec{x}_0\\right)  = \\frac{1}{2} \\left[ J^{obs}_{k} + J^{ini}\\right] $$ \n",
@@ -929,7 +929,7 @@
    "source": [
     "## 4DVAR Example\n",
     "\n",
-    "- Doing 4D var with the example that I picked is not very smart. The reason is that the model forgets the different initial conditions that it after time length $\\tau$.\n",
+    "- Doing 4D var with the example that I picked is not ideal. The reason is that the model forgets the different initial conditions that it after time length $\\tau$.\n",
     "- Instead what we would really like to do is to treat the $w_k$ like control parameters, and choose them in a way that optimizes our solution against the observations.\n",
     "  - Unfortunately we can't choose as many $w_k$ as there are time steps, so we will average them over each forecast interval and just hold them constant. This is essentially the same thing as estimating a low pass filtered version of $w$  \n",
     "- This is actually how the ECCO ocean model reanalysis works, by choosing control parameters in order to optimize the model state against a set of observations.\n",
